Here's the commented version of the code snippet:

```c++
// Copyright 2018 gRPC authors.
// This file is part of the gRPC C++ library's server interface.

// Header guard to prevent multiple inclusions of this header file
#ifndef GRPCXX_SERVER_H
#define GRPCXX_SERVER_H

// Include the main gRPC C++ server implementation header
// This provides all the necessary classes and functions for creating
// and managing a gRPC server
#include <grpcpp/server.h>

// End of header guard
#endif
```

The comments explain:
1. The copyright notice
2. The purpose of the file in the gRPC C++ library
3. The header guard mechanism to prevent multiple inclusions
4. The purpose of the included header file
5. The closing of the header guard

These comments provide context about the file's role in the gRPC ecosystem and explain the technical elements of the header file structure.